Alignment Changes & Navbar Fixed

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -94,6 +94,7 @@ body {
   border-radius: 10px;
   background: #fafafa;
   color: #222222;
+  text-align: center;
 }
 .card img {
   width: 100%;
@@ -103,6 +104,7 @@ body {
 }
 .card h4 {
   margin: 8px 0 4px;
+  font-size: larger;
 }
 .card:hover{
   background-color: #263239;
@@ -147,6 +149,9 @@ body {
 }
 .product-body h3 {
   margin: 0 0 6px;
+}
+.product-body p {
+  text-align: justify;
 }
 .WIbuttons{
   position: absolute;
@@ -393,8 +398,8 @@ body {
   }
 }
 @media (max-width: 720px) {
-  .hero {
-    margin-left: 7%;
+  .hero-left p{
+    text-align: center;
   }
   .header-inner {
     flex-wrap: wrap; /* allow elements to stack */
@@ -449,9 +454,6 @@ body {
   }
   .WIbuttons{
     position: relative;
-  }
-  .hero-left{
-    margin-left: 0;
   }
   .modal-content {
     margin-top: 30%;
